# move4d_visibility_plugin

./: CMakeLists.txt  README.txt
include/VisibilityGrid/: LocationIndicatorPlanner.hpp  PointingPlanner.hpp  PointingPlannerModule.hpp  VisibilityCell.hpp  VisibilityGrid.hpp  VisibilityGridCreator.hpp  VisibilityGridLoader.hpp  VisibilityModule.hpp  VisibilityPlanner.hpp
src/: LocationIndicatorPlanner.cpp  PointingPlanner.cpp  PointingPlannerModule.cpp  VisibilityCell.cpp  VisibilityGrid.cpp  VisibilityGridCreator.cpp  VisibilityGridLoader.cpp  VisibilityModule.cpp  VisibilityPlanner.cpp  create_entities.cpp  test.cpp
